# mad-rs

./: Cargo.toml  README.md  agents.md
mad-core/: Cargo.toml
mad-core/src/: lib.rs
mad-core/src/geo/: grid_cell.rs  grid_full.rs  grid_location.rs  grid_region.rs  grid_zone.rs  mod.rs
mad-datastore/: Cargo.toml
mad-datastore/src/: datastore.rs  entity_query.rs  entity_row.rs  entity_table.rs  layer_query.rs  layer_row.rs  layer_table.rs  lib.rs  stored_type.rs
mad-engine/: Cargo.toml
mad-engine/src/: engine.rs  event_entry.rs  event_queue.rs  lib.rs
mad-engine/src/ecs/: command.rs  component.rs  mod.rs  query.rs  runner.rs  system.rs  timing.rs
mad-engine/src/events/: event_ds_set.rs  mod.rs
mad-engine/src/subscribers/: mod.rs
mad-game/: Cargo.toml
mad-game/src/: lib.rs
mad-game/src/components/: cmp_aircraft.rs  mod.rs
mad-game/src/layers/: lyr_airports.rs
mad-game/src/systems/: mod.rs  sys_aircraft_move.rs
mad-osm-importer/: Cargo.toml
mad-osm-importer/data/: .gitignore
mad-osm-importer/src/: downloader.rs  main.rs  osm_index.rs
mad-server/: Cargo.toml
mad-server/src/: main.rs
notes/: datastore.md  engine.md  todo.md  types.md
src/: main.rs
src/bundles/: mod.rs  silo_bundle.rs
src/components/: inventory.rs  map_pos.rs  mod.rs  on_the_go.rs  owner.rs  selectable.rs  selected.rs  unit_action.rs  unit_info.rs  unit_silo.rs
src/events/: input.rs  mod.rs  spawn.rs
src/sim/: mod.rs
src/sim/engine/: entity.rs  interactable.rs  mod.rs  position.rs  time.rs  world.rs  world_entity.rs
src/sim/units/: silo.rs
src/systems/: mod.rs  spawn_sys.rs  ui_sys.rs
src/systems/ui/: mod.rs  ui_create_unit.rs  ui_selected_unit.rs
src/units/: mod.rs  silo.rs  spawnable.rs
