[package]
name = "mad-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_egui = "0.20"
bevy-inspector-egui = "0.18.3"
bevy_mod_picking = {"version" = "0.13.0", features = ["backend_sprite"]}
strum = "0.24"
strum_macros = "0.24"
enum_dispatch = "0.3.11"