[package]
name = "mad-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simplelog = "0.12.1"
log = "0.4.17"
strum = "0.24"
strum_macros = "0.24"
enum_dispatch = "0.3.11"
pretty_env_logger = "0.4.0"