[package]
name = "mad-osm-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
log = "0.4.28"
mad-core = { path = "../mad-core" }
mad-datastore = { path = "../mad-datastore" }
osmpbf = "0.3.8"
pretty_env_logger = "0.5.0"
reqwest = "0.12.24"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "mad-osm-importer"
path = "src/main.rs"

